--- a/css/style.css
+++ b/css/style.css
@@ -616,7 +616,7 @@ img {
 }
 @media (max-width: 980px) {
   .intro .intro-title {
-    margin-top: 80px;
+    margin-top: 100px;
   }
 }
 .intro .intro-description {
